project/postgres-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: postgres-deployment
  labels:
    app: my-postgres
    type: db

spec: 
  template: 
    metadata:
      name: postgres-pod
      labels:
        app: my-postgres
        type: db

    spec:
      volumes:
       - name: postgresvolume
         persistentVolumeClaim:
           claimName: postgres-pvc-new

      containers:
        - name: my-postgres-container
          image: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: postgresvolume
  replicas: 1
  selector: 
    matchLabels: 
      type: db
      app: my-postgres
