project/myfrontend-service-clusterip.yml
apiVersion: v1

kind: Service

metadata:
  name: myfrontend-service

spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80

  selector:
    app: my-frontend
    type: frontend
